# markit

./: .gitignore  README.md  markit.ipynb  notebook.ipynb  requirements.txt
.github/workflows/: build.yml
.roo/rules/: rules.md
core/: create_midi_with_markers.py  get_video_fps.py  scene_detection.py
docs/: rust-mvp-implementation-plan.md
gui/: MarkIt.spec  create_midi_with_markers.py  gui.py  gui_v2.py
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
rust-scenedetect/: Cargo.toml  README.md
rust-scenedetect/src/: common.rs  content_detector.rs  flash_filter.rs  lib.rs  main.rs  video_stream.rs
tests/: test_unittests.py
wasm/: index.html  markit.py
